traefik/test-workload/test-workload-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.swinney.io`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.swinney.io`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: default
